Fixed responsivity bugs on smaller devices

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -695,6 +695,10 @@ video {
   z-index: 10;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -744,10 +748,6 @@ video {
 
 .mr-3 {
   margin-right: 0.75rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
 }
 
 .mt-10 {
@@ -806,10 +806,6 @@ video {
   max-height: 2.5rem;
 }
 
-.max-h-6 {
-  max-height: 1.5rem;
-}
-
 .min-h-\[130px\] {
   min-height: 130px;
 }
@@ -828,6 +824,10 @@ video {
 
 .min-w-\[350px\] {
   min-width: 350px;
+}
+
+.max-w-6 {
+  max-width: 1.5rem;
 }
 
 .max-w-screen-2xl {
@@ -884,10 +884,6 @@ video {
 
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
 }
 
 .rounded-\[30px\] {
@@ -1109,6 +1105,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1161,6 +1162,10 @@ video {
   text-decoration-line: underline;
 }
 
+.opacity-40 {
+  opacity: 0.4;
+}
+
 .opacity-80 {
   opacity: 0.8;
 }
@@ -1173,6 +1178,10 @@ video {
 
 .blur-md {
   --tw-blur: blur(12px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1328,12 +1337,12 @@ canvas {
     display: inline-block;
   }
 
-  .sm\:max-h-\[50px\] {
-    max-height: 50px;
-  }
-
   .sm\:w-\[120px\] {
     width: 120px;
+  }
+
+  .sm\:max-w-\[50px\] {
+    max-width: 50px;
   }
 
   .sm\:flex-row {
@@ -1427,6 +1436,10 @@ canvas {
 
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:block {
+    display: block;
   }
 
   .lg\:grid-cols-2 {
